--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue_plus: ^1.1.3
+  equatable: ^2.0.3
+  json_annotation: ^4.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
   pigeon: ^1.0.14
+  build_runner: ^2.1.5
+  json_serializable: ^6.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
