--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@
 .dart_tool/
 .packages
 build/
+
+#auto generated
+**/android/**/GeneratedPluginRegistrant.java
+**/ios/Runner/GeneratedPluginRegistrant.*
