--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_blue_plus: ^1.1.3
   equatable: ^2.0.3
   json_annotation: ^4.3.0
+  device_info_plus: ^3.2.3
 
 dev_dependencies:
   flutter_test:
